--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="doctor with angular base">
   <meta name="author" content="hugin">
-  <title>Buy管理后台</title>
+  <title>学生就业管理系统</title>
     <!-- build:css ./static/css/base.css -->
     <link rel="stylesheet" type="text/css" href="./static/js/libs/bootstrap/2.3.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./static/js/libs/dl/2.0.0/css/dandelion.theme.css">
@@ -67,36 +67,18 @@
     <script src="./static/js/buy/buyLogInOrOutController.js"></script>
     <script src="./static/js/buy/buySidebarController.js"></script>
     <script src="./static/js/buy/buyLoginController.js"></script>
-    <script src="./static/js/buy/buyOrderController.js"></script>
-    <script src="./static/js/buy/buyOrderDetailController.js"></script>
-    <script src="./static/js/buy/buyReturnOrderController.js"></script>
-    <script src="./static/js/buy/buyReturnAddController.js"></script>
-    <script src="./static/js/buy/buyReturnDetailController.js"></script>
-    <script src="./static/js/buy/shelvesController.js"></script>
-    <script src="./static/js/buy/buyShelvesEditController.js"></script>
-    <script src="./static/js/buy/buySupplierController.js"></script>
-    <script src="./static/js/buy/buySupplierCreateController.js"></script>
-    <script src="./static/js/buy/buySupplierUpdateController.js"></script>
-    <script src="./static/js/buy/buyPromotionController.js"></script>
-    <script src="./static/js/buy/buyPromotionUpdateController.js"></script>
-    <script src="./static/js/buy/buyOrderPayordersController.js"></script>
-    <script src="./static/js/buy/buyCouponCreateController.js"></script>
-    <script src="./static/js/buy/buyCouponSendController.js"></script>
-    <script src="./static/js/buy/buySettleController.js"></script>
-    <script src="./static/js/buy/buySettleDownloadController.js"></script>
-    <script src="./static/js/buy/buyAttributeController.js"></script>
-    <script src="./static/js/buy/buyCategoryController.js"></script>
-    <script src="./static/js/buy/buyCategoryAddController.js"></script>
-    <script src="./static/js/buy/buyCategoryEditController.js"></script>
-    <script src="./static/js/buy/buySPUListController.js"></script>
-    <script src="./static/js/buy/buySPUAddController.js"></script>
-    <script src="./static/js/buy/buySPUEditController.js"></script>
-    <script src="./static/js/buy/buyTicketUploadController.js"></script>
-    <script src="./static/js/buy/buySpuBrandAddController.js"></script>
-    <script src="./static/js/buy/buyBarcodeController.js"></script>
     <script src="./static/js/buy/buyWelcomeController.js"></script>
     <script src="./static/js/buy/buyAPISettingsController.js"></script>
     <script src="./static/js/tools/toolSearchController.js"></script>
+    <script src="./static/js/buy/myChangeStuInfoController.js"></script>
+    <script src="./static/js/buy/myChangeComInfoController.js"></script>
+    <script src="./static/js/buy/myAddJobInfoController.js"></script>
+    <script src="./static/js/buy/myAddStuInfoController.js"></script>
+    <script src="./static/js/buy/myStuInfoQueryController.js"></script>
+    <script src="./static/js/buy/myAddComInfoController.js"></script>
+    <script src="./static/js/buy/myComInfoQueryController.js"></script>
+    <script src="./static/js/buy/myJobInfoQueryController.js"></script>
+    <script src="./static/js/buy/myJobInfoListController.js"></script>
     <!-- endbuild -->
 
 </body>
